tests/NormalTests/paczka2/big_fuzzy/82146081.err
Error in line 7: ipNCYx1 A845 48,1
Error in line 14: ipNCYx1 S969 34,2
Error in line 15: ipNCYx1 A845 14,0
Error in line 19: ipNCYx1 S75 8,3
Error in line 26: hJFI34 S705 47,3
Error in line 36: mxMVZxMd05Z S705 73,26
Error in line 40: ipNCYx1 S969 29,5
Error in line 52: A845 S969 50,4
Error in line 57: IA76M06 S705 55,5
Error in line 69: hJFI34 A845 03,3
Error in line 74: vzS S969 72,9
Error in line 79: IA76M06 S969 39,0
Error in line 81: mxMVZxMd05Z A411 35,6
Error in line 94: hJFI34 A411 41,2
Error in line 115: KVLWAmA7ED S969 18,1
Error in line 118: A845 A411 92,5
Error in line 121: IA76M06 A845 94,9
Error in line 131: KVLWAmA7ED S969 63,2
Error in line 143: mxMVZxMd05Z A411 61,9
Error in line 153: mxMVZxMd05Z S969 81,3
Error in line 152: A845 S969 89,1
Error in line 165: mxMVZxMd05Z A845 49,8
Error in line 155: A845 S705 3,6
Error in line 173: hJFI34 S705 59,0
Error in line 201: A845 A845 91,4
Error in line 198: hJFI34 A411 50,0
Error in line 206: hJFI34 S969 14,5
Error in line 200: mxMVZxMd05Z S705 21,0
Error in line 215: KVLWAmA7ED A845 1,2
Error in line 220: ipNCYx1 S969 295,97
Error in line 214: mxMVZxMd05Z A845 35,7
Error in line 217: KVLWAmA7ED A411 87,3
Error in line 224: KVLWAmA7ED S705 67,8
Error in line 208: hJFI34 A411 29,5
Error in line 236: A845 A845 4,4
Error in line 241: vzS A845 29,4
